# ZephyrJam

./: .gitignore  CLAUDE.md  DEMO.md  PRD.md  README.md  USERMANUAL.md  deploy_iot.ps1  run.ps1
dashboard/: dashboard.py
dashboard/pwa/: app.js  index.html  manifest.webmanifest  sw.js
docs/: iot-methodology.html  learn.html
scripts/: build.sh  build_jammer.sh  capture.sh  capture_win.py  cloud_bridge.conf.example  copy_flash.sh  copy_flash_jammer.sh  detect_ports.py  espnow_bridge.py  fetch_blobs.sh  fix_env.sh  fix_ninja.sh  flash.sh  jam_probe.py  jamshield-cloud.conf  jamshield-espnow.service  jamshield_env.sh  monitor.sh  mosquitto_ws.conf  pi_arduino_setup.sh  rpi.py  rpi_diag.py  rpi_iot_setup.sh  rpi_root.sh  rpi_service.sh  rpi_user.sh  sdk_setup.sh  verify_tree.sh  verify_tree2.sh  watch.sh  west_setup.sh  ws_test.py
src/esp32/: CMakeLists.txt  Kconfig  prj.conf  west.yml
src/esp32/boards/: esp32_devkitc_wroom.overlay
src/esp32/include/: ble_gatt.h  conn_mgr_setup.h  espnow_l2.h  jam_detect.h  jamshield.h  sensor_ldr.h  wifi_mqtt.h
src/esp32/src/: adaptive_threshold.c  ble_gatt.c  button.c  conn_mgr_setup.c  control.c  esp_ps_shim.c  espnow_hal.c  espnow_l2.c  jam_detect.c  main.c  payload_thread.c  sensor_ldr.c  wifi_mqtt.c
src/espnow_rx_arduino/: espnow_rx_arduino.ino
src/jammer/: CMakeLists.txt  prj.conf
src/jammer/boards/: esp32_devkitc_wroom.overlay
src/jammer/src/: jam_hal.c  main.c
src/rpi4/: ble_receiver.py  database.py  espnow_receiver.py  jammer_control.py  receiver.py  requirements.txt  setup_rpi4.sh
